--- a/3dmodelling.html
+++ b/3dmodelling.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <!-- The relates to the Google Font used in h1 -->
-    <link href='https://fonts.googleapis.com/css?family=Caesar Dressing' rel='stylesheet'>
+    <link href='<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">'>
     <div class="header">
       <img src="images/DTportfolio_header.png">
     </div>
