--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>You should change this on every page</title>
+    <title>No</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <!-- The relates to the Google Font used in h1 -->
     <link href='https://fonts.googleapis.com/css?family=Caesar Dressing' rel='stylesheet'>
     <div class="header">
-      <img src="images/DTportfolio_header.png">
+      <img src="images/banner.png">
     </div>
   </head>
   <div class="wrapper">
@@ -32,59 +32,43 @@
       <!-- page heading- add name here! -->
       <h1>Welcome</h1>
       <h2>Introducing Me</h2>
+      <h5>By Me</h5>
       <!-- now the Information text box-->
       <div class=information>
         <p>
-            Here you could introduce yourself. Your likes, dislikes etc <br><br>
-            Here you can take about what you learnt last year and what you are looking forward to learning this year. 
+            Hello my name is Eethern Tay. I am a student at Burnside High School. I am currently in Year 10. I have a strong passion for computer science and I am trying to improve my ability to code.
         </p>  
       </div>   
         <!-- This is the container for all the images you want to add- it's a flexbox so add as many as you want -->
       <div class='container'>
         <!-- item 1 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">       
+          <img src="images/20210402_175119.jpg" alt="please replace me">   
+          <p>My Dog</p>
         </div> 
         <!-- end of item 1 -->    
         <!-- item 2 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/image-1.png" alt="please replace me"> 
+          <p>Goofy Clash Royale Blender Thing</p>
         </div> 
         <!-- end of item 2 -->    
         <!-- item 3 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/download.png" alt="please replace me">
+          <p>I need WiFi to exist</p>
         </div>  
         <!-- end of item 3 -->
         <!-- item 4 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/360_F_104787586_63vz1PkylLEfSfZ08dqTnqJqlqdq0eXx.jpg "alt="please replace me">
+          <p>Photography is cool</p>
         </div>  
         <!-- end of item 4 -->
-        <!-- item 5 starts here-->
-        <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
-        </div>  
-        <!-- end of item 5 -->
-        <!-- item 6 starts here-->
-        <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">       
-        </div> 
-        <!-- end of item 6 -->    
-        <!-- item 7 starts here-->
-        <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
-        </div> 
-        <!-- end of item 7 -->    
-        <!-- item 8 starts here-->
-        <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
-        </div>  
-        <!-- end of item 8 -->
       </div>
     </main>  
     <footer>
-      <p>&#169;Copyright Your Name 2024</p>
+      <p>&#169;Eethern Tay 2024</p>
     </footer>
   </body>
 </html>
